--- a/helm-chart/templates/frontend.yaml
+++ b/helm-chart/templates/frontend.yaml
@@ -27,7 +27,9 @@ spec:
       labels:
         app: {{ .Values.frontend.name }}
       annotations:
-        sidecar.istio.io/rewriteAppHTTPProbers: "true"
+        sidecar.istio.io/rewriteAppHTTPProbers: true
+        prometheus.io/scrape: true
+        prometheus.io/port: {{ .Values.frontend.metricsPort }}
     spec:
       {{- if .Values.serviceAccounts.create }}
       serviceAccountName: {{ .Values.frontend.name }}
@@ -114,6 +116,8 @@ kind: Service
 metadata:
   name: {{ .Values.frontend.name }}
   namespace: {{ .Release.Namespace }}
+  prometheus.io/scrape: true
+  prometheus.io/port: {{ .Values.frontend.metricsPort }}
 spec:
   type: ClusterIP
   selector:
