--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -1,26 +1,31 @@
 name: Terraform Apply
 
 on:
-  push:
-    paths:
-      - 'Terraform-infra/**'
+  workflow_run:
+    workflows: ["Terraform Plan"]
+    types:
+      - completed
 
 jobs:
   terraform:
     name: 'Terraform Apply'
     runs-on: ubuntu-latest
-    environment: production
     
     defaults:
       run:
         shell: bash
-        #Inform a working directory if .tf files are not in root folder
+        # Inform a working directory if .tf files are not in the root folder
         working-directory: ./Terraform-infra 
         
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v2
+        
+      - name: Download Terraform Plan Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: terraform-plan
+          path: /tmp/terraform-plan
         
       - name: Decrypt GCR_KEY
         run: |
@@ -33,6 +38,6 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply ${{ steps.terraform_plan.outputs.plan_path }}
+        run: terraform apply /tmp/terraform-plan/tfplan.out
         env:
           GOOGLE_CREDENTIALS:  /tmp/gcr-key.json
